Prevent distorting images when they're larger that width

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -57,6 +57,7 @@ main {
  */
 img {
   max-width: 100%;
+  height: auto;
   vertical-align: middle;
 }
 
